syntax = "proto3";
package ksuser;

option go_package = "ksuser/pb/regions;regions";

import "branches/branch_message.proto";

message Region {
  string id = 1;
  string company_id = 2;
  string name = 3;
  string code = 4;
  repeated Branch branches = 5;
  string created_at =  6;
  string created_by = 7;
  string updated_at = 8;
  string updated_by = 9;
}